--- a/frontend/src/app/components/log-in/log-in.component.html
+++ b/frontend/src/app/components/log-in/log-in.component.html
@@ -1,1 +1,7 @@
-<p>log-in works!</p>
+<!-- <p>log-in works!</p> -->
+
+<button mat-button color="primary" (click)="signInWithGoogle()">Google SSO</button> 
+<button mat-button color="primary" (click)="signOut()">Sign out</button>
+<div *ngIf="user" class="">
+    user is
+</div>
