--- a/frontend/src/app/components/create-meeting/create-meeting.component.html
+++ b/frontend/src/app/components/create-meeting/create-meeting.component.html
@@ -1,10 +1,34 @@
-<p>create-meeting works!</p>
+<!-- <p>create-meeting works!</p> -->
 <form [formGroup]="profileForm" (ngSubmit)="onSubmit()" class="formular">
-    <mat-form-field  color="primary" appearance="fill">
-        <mat-label>Meeting Date</mat-label>
-        <input matInput [matDatepicker]="picker1" formControlName="meetingDate" />
+    <mat-form-field  color="primary" appearance="fill" >
+        <mat-label>Meeting Start Date</mat-label>
+        <input matInput [matDatepicker]="picker1" formControlName="meetingStartDate" />
         <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
         <mat-datepicker #picker1 color="accent"></mat-datepicker>
+      </mat-form-field>
+
+      <mat-form-field  color="primary" appearance="fill" >
+        <mat-label>Meeting End Date</mat-label>
+        <input matInput [matDatepicker]="picker2" formControlName="meetingEndDate" />
+        <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
+        <mat-datepicker #picker2 color="accent"></mat-datepicker>
+      </mat-form-field>
+
+      <mat-form-field  color="primary" appearance="fill">
+        <input  matInput type="time" placeholder="start time" formControlName="meetingStartTime">
+      </mat-form-field>
+
+      <mat-form-field   color="primary" appearance="fill">
+        <input  matInput type="time" placeholder="end time" formControlName="meetingEndTime">
+      </mat-form-field >
+
+      <mat-form-field appearance="fill">
+        <mat-label>Meeting Room</mat-label>
+        <mat-select formControlName="meetingRoom" name="food">
+          <mat-option *ngFor="let room of rooms" [value]="room.value">
+            {{room.viewValue}}
+          </mat-option>
+        </mat-select>
       </mat-form-field>
     
       <button type="submit" [disabled]="!profileForm.valid">Submit</button>
