--- a/frontend/src/app/components/nav-bar/nav-bar.component.html
+++ b/frontend/src/app/components/nav-bar/nav-bar.component.html
@@ -1,15 +1,22 @@
-<p>nav-bar works!</p>
-<mat-tab-group dynamicHeight animationDuration="0ms" [backgroundColor]="'primary'" >
-    <mat-tab>
-        <ng-template mat-tab-label class="nav-header">Home</ng-template>
-        <app-home></app-home>
-    </mat-tab>
-    <mat-tab>
-        <ng-template mat-tab-label class="nav-header">Map</ng-template>
-        <app-map></app-map>
-    </mat-tab>
-    <mat-tab >
-        <ng-template mat-tab-label class="nav-header">Create</ng-template>
-        <app-create-meeting></app-create-meeting>
-    </mat-tab>
-  </mat-tab-group>
+<!-- <p>nav-bar works!</p> -->
+
+<!-- <div *ngIf="LoggedIn === true" class=""> -->
+    <mat-tab-group dynamicHeight animationDuration="0ms" [backgroundColor]="'primary'" >
+        <mat-tab>
+            <ng-template mat-tab-label class="nav-header">Home</ng-template>
+            <app-home></app-home>
+        </mat-tab>
+        <mat-tab>
+            <ng-template mat-tab-label class="nav-header">Map</ng-template>
+            <app-map></app-map>
+        </mat-tab>
+        <mat-tab >
+            <ng-template mat-tab-label class="nav-header">Create</ng-template>
+            <app-create-meeting></app-create-meeting>
+        </mat-tab>
+      </mat-tab-group>
+<!-- </div> -->
+
+<!-- <a [routerLink]="['/basic']"></a> -->
+
+<app-log-in (loggedIn)="onLogIn($event)" ></app-log-in>
