--- a/frontend/src/app/components/create-meeting/create-meeting.component.css
+++ b/frontend/src/app/components/create-meeting/create-meeting.component.css
@@ -1,9 +1,22 @@
 .formular {
-  background-color: rgb(136, 88, 248);
+  background-color: rgb(199, 178, 247);
   display: flex;
-  flex-direction: column;
-  max-width: 20%;
+  flex-flow: column wrap;
+  max-width: 60%;
+  justify-content: space-evenly;
+  /* align-items: ; */
 }
 .mat-icon-button {
   color: #000;
+}
+
+.flex-ro {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.flex_item {
+  flex: 0 0 20%;
 }
