--- a/frontend/src/app/components/create-meeting/create-meeting.component.html
+++ b/frontend/src/app/components/create-meeting/create-meeting.component.html
@@ -1,35 +1,56 @@
 <!-- <p>create-meeting works!</p> -->
 <form [formGroup]="profileForm" (ngSubmit)="onSubmit()" class="formular">
-    <mat-form-field  color="primary" appearance="fill" >
-        <mat-label>Meeting Start Date</mat-label>
-        <input matInput [matDatepicker]="picker1" formControlName="meetingStartDate" />
-        <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
-        <mat-datepicker #picker1 color="accent"></mat-datepicker>
-      </mat-form-field>
 
-      <mat-form-field  color="primary" appearance="fill" >
-        <mat-label>Meeting End Date</mat-label>
-        <input matInput [matDatepicker]="picker2" formControlName="meetingEndDate" />
-        <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
-        <mat-datepicker #picker2 color="accent"></mat-datepicker>
-      </mat-form-field>
+  <mat-form-field >
+    <mat-label>Meeting name</mat-label>
+    <input matInput placeholder="Ex. Pizza" value="Sushi" formControlName="meetingName">
+  </mat-form-field>
 
-      <mat-form-field  color="primary" appearance="fill">
-        <input  matInput type="time" placeholder="start time" formControlName="meetingStartTime">
-      </mat-form-field>
 
-      <mat-form-field   color="primary" appearance="fill">
-        <input  matInput type="time" placeholder="end time" formControlName="meetingEndTime">
-      </mat-form-field >
-
-      <mat-form-field appearance="fill">
-        <mat-label>Meeting Room</mat-label>
-        <mat-select formControlName="meetingRoom" name="food">
-          <mat-option *ngFor="let room of rooms" [value]="room.value">
-            {{room.viewValue}}
-          </mat-option>
-        </mat-select>
-      </mat-form-field>
+  <div class="flex-ro">
+    <mat-form-field  color="primary" appearance="fill" class="flex_item">
+      <mat-label>Meeting Start Date</mat-label>
+      <input matInput [matDatepicker]="picker1" formControlName="meetingStartDate" />
+      <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
+      <mat-datepicker #picker1 color="accent"></mat-datepicker>
+    </mat-form-field>
     
-      <button type="submit" [disabled]="!profileForm.valid">Submit</button>
+    <mat-form-field  color="primary" appearance="fill" class="flex_item">
+      <input  matInput type="time" placeholder="start time" formControlName="meetingStartTime">
+    </mat-form-field>
+  </div>
+
+  <div class="flex-ro">
+    <mat-form-field  color="primary" appearance="fill" class="flex_item">
+      <mat-label>Meeting End Date</mat-label>
+      <input matInput [matDatepicker]="picker2" formControlName="meetingEndDate" />
+      <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
+      <mat-datepicker #picker2 color="accent"></mat-datepicker>
+    </mat-form-field>
+
+    <mat-form-field   color="primary" appearance="fill" class="flex_item">
+      <input  matInput type="time" placeholder="end time" formControlName="meetingEndTime">
+    </mat-form-field >
+  </div>
+
+  <mat-form-field >
+    <mat-label>Email</mat-label>
+    <input type="email" matInput formControlName="meetingInvitees" placeholder="Ex. pat@example.com">
+    <!-- <mat-error *ngIf="meetingInvitees.hasError('email') ">
+      Please enter a valid email address
+    </mat-error> -->
+  </mat-form-field>
+
+  <mat-form-field appearance="fill" class="flex_item">
+    <mat-label>Meeting Room</mat-label>
+    <mat-select 
+      formControlName="meetingRoom" 
+      name="meetingRoom">
+      <mat-option *ngFor="let room of rooms" [value]="room.value">
+        {{room.viewValue}}
+      </mat-option>
+    </mat-select>
+  </mat-form-field>
+    
+      <button mat-button color="primary" type="submit" [disabled]="!profileForm.valid">Submit</button>
 </form>
