use route and add auth to view

--- a/frontend/src/app/components/log-in/log-in.component.html
+++ b/frontend/src/app/components/log-in/log-in.component.html
@@ -1,7 +1,4 @@
-<!-- <p>log-in works!</p> -->
+<p>Please LogIn to view your calendar</p>
 
 <button mat-button color="primary" (click)="signInWithGoogle()">Google SSO</button> 
-<button mat-button color="primary" (click)="signOut()">Sign out</button>
-<div *ngIf="user" class="">
-    user is
-</div>
+<!-- <button mat-button color="primary" (click)="signOut()">Sign out</button> -->
