--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-nav-bar></app-nav-bar>
 <!-- <app-log-in></app-log-in> -->
-
-<router-outlet></router-outlet>
+<div class="other">
+    <router-outlet></router-outlet>
+</div>
