--- a/frontend/src/app/components/create-meeting/create-meeting.component.css
+++ b/frontend/src/app/components/create-meeting/create-meeting.component.css
@@ -1,13 +1,9 @@
 .formular {
-  background-color: rgb(199, 178, 247);
   display: flex;
   flex-flow: column wrap;
   max-width: 60%;
   justify-content: space-evenly;
-  /* align-items: ; */
-}
-.mat-icon-button {
-  color: rgb(161, 248, 244);
+  margin-left: 20%;
 }
 
 .flex-ro {
