--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -1,17 +1,14 @@
-
-<mat-grid-list cols="3" rowHeight="2:1.5" class="flex-container"> 
-    <mat-grid-tile *ngFor="let event of events;" class="card">
-        <mat-card class="">
-            <mat-card-header>
-            
-            <mat-card-title>{{event.name}}</mat-card-title>
-            <!-- <mat-card-subtitle>Dog Breed</mat-card-subtitle> -->
-            </mat-card-header>
-            <mat-card-content>
-            <p>{{event.start}} </p>
-            <p>{{event.end}} </p>
-            <p>{{event.cab}} </p>
-            </mat-card-content>
-        </mat-card>
-    </mat-grid-tile>
-</mat-grid-list>
+<div class="flex-container">
+    <mat-card *ngFor="let event of events;" class="card">
+        <mat-card-header>
+        
+        <mat-card-title>{{event.name}}</mat-card-title>
+        
+        </mat-card-header>
+        <mat-card-content>
+        <p>{{event.start}} </p>
+        <p>{{event.end}} </p>
+        <p>{{event.cab}} </p>
+        </mat-card-content>
+    </mat-card>
+</div>
