--- a/frontend/src/app/components/log-in/log-in.component.html
+++ b/frontend/src/app/components/log-in/log-in.component.html
@@ -1,4 +1,4 @@
-<p>Please LogIn to view your calendar</p>
+<p>Please Log In to view your calendar</p>
 
-<button mat-button color="primary" (click)="signInWithGoogle()">Google SSO</button> 
+<button mat-raised-button color="primary" (click)="signInWithGoogle()">Log In</button> 
 <!-- <button mat-button color="primary" (click)="signOut()">Sign out</button> -->
