--- a/frontend/src/app/components/create-meeting/create-meeting.component.html
+++ b/frontend/src/app/components/create-meeting/create-meeting.component.html
@@ -34,7 +34,7 @@
   </div>
 
   <mat-form-field >
-    <mat-label>Email</mat-label>
+    <mat-label>Invitees</mat-label>
     <input type="email" matInput formControlName="meetingInvitees" placeholder="Ex. pat@example.com">
     <!-- <mat-error *ngIf="meetingInvitees.hasError('email') ">
       Please enter a valid email address
